# blanc-quant-lob-engine

./: .README.md.swp  .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .hadolint.yaml  .markdownlint-cli2.jsonc  .markdownlint.readme.yml  .markdownlint.yml  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  .secrets.baseline.bak  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.save  CMakePresets.json  CODEQL_WORKFLOW_FIX.md  COMMERCIAL-LICENSE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  RELEASE.md  REVIEW_SUMMARY.md  ROADMAP.md  SECURITY.md  codespell.ignore  cspell.json  current-scan.json  hot_loop  hot_loop.cpp  readme.markdownlint.yml  run_local_checks.sh
.github/: FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/agents/: BQLagent.md
.github/workflows/: app-ci.yml  c-cpp.yml  canonical_ids_evidence.yml  ci.yml  cmake.yml  codeql-badge.yml  codeql.yml  codeql.yml.bak  codeqlA.yml  container-scan.yml  determinism.yml  determinism_affinity_kernel.yml  determinism_compiler_matrix.yml  determinism_gate_replay.yml  determinism_kernel_matrix.yml  docs-lint.yml  long_horizon_stability.yml  performance-badge.yml  pin-actions-preview.yml  pin-actions-schedule.yml  pin-check.yml  refresh-secrets-baseline.yml  release-draft.yml  repro.yml  secrets-scan.yml  smoke-sitrep.yml  snapshot-nightly.yml  update-badge.yml  verify-bench.yml  workflow-usage-report.yml
.github/workflows/.backup_20251201040910/: ci.yml  codeql.yml  container-scan.yml  determinism.yml  pin-check.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/bench/: Makefile  blanc_bench  cmake_install.cmake
apps/: CMakeLists.txt  README.md  app_config.cpp  app_config.hpp  bench_app.cpp  main.cpp  policy.yaml  test_app.cpp
artifacts/baselines/: sample_runner.json
badges/: codeql_alerts.json  performance.json  performance_extra.json  performance_tail.json  tierc_tail.json
bench/: CMakeLists.txt  bench_gates.cpp  bench_main.cpp  bench_parsing.cpp  bench_replay.cpp  bench_util.hpp
bql-enterprise/: CMakeLists.txt  README.md
bql-enterprise/deploy/k8s/: deployment.yaml
bql-enterprise/deploy/systemd/: bqs-enterprise.service
bql-enterprise/include/bqs/adapters/: adapter_types.hpp  market_data_adapter.hpp  order_flow_adapter.hpp
bql-enterprise/tests/: CMakeLists.txt  test_contract.cpp
ci/workflows/: enterprise-ci.yml
cmake/toolchains/: apple-clang.cmake
data/golden/: itch_1m.digest  itch_1m.fnv
docs/: BEST_PRACTICES.md  COMPETITIVE_POSITIONING.md  CPU_PINNING_RATIONALE.md  DETERMINISM_ABSOLUTISM.md  LONG_HORIZON_STABILITY.md  PATENT_EVIDENCE_CANONICAL_IDS.md  PE_TECH_SUMMARY.md  REPRO.md  deliverable_marking_checklist.md  gates.md  how-it-works-ascii.txt  local-checks.md  observability-wiki.md  provisional_patent_outline.md  signalgrid_rename_plan.md  technology_transition.md  vortex_scoring.md  workflow-usage-dashboard.md
docs/evidence/canonical_ids_v1/: PATENT_EVIDENCE_CANONICAL_IDS.md
examples/: README.md  qa_demo.csv  run_demo.py  sample_benchmark.json  sample_policy.yaml  sample_test.yaml
include/: bl_guard.hpp  breaker.hpp  detectors.hpp  order_book.hpp  order_book.hpp.save  telemetry.hpp
scripts/: bench.sh  bench_report.py  build.sh  ensure_golden_input.sh  long_horizon_stability.sh  pin_actions_by_shas.sh  post-build.sh  prom_textfile.sh  release_package.sh  run-benchmark.sh  run-benchmark.sh.save  run_demo.py  run_example.py  run_local_checks.sh  setup-packages.sh  sg  tail_matrix_artifact.sh  test_cpu_pin.sh  update_codeql_badge.py  update_github_release.py  update_performance_badges.py  verify_bench.py  verify_golden.sh
src/: LICENSE  README.md  breaker.cpp  detectors.cpp  gen_synth.cpp  gen_synth.cpp.save  replay.cpp  telemetry.cpp
tests/: test_book.cpp  test_book_snapshot.cpp  test_breaker.cpp  test_cli_numeric_validation.cpp  test_empty.cpp  test_gate_transitions.cpp  test_golden.cpp  test_release_package.sh  test_replay_cli.cpp  test_tail_latency.cpp  test_telemetry.cpp
tests/golden/: book_snapshot.golden.json  book_snapshot_burst.golden.json
tools/: gen_synth.cpp
